cgt-macros/tests/trybuild/failures/cgt_test_fd_struct.stderr
error: expected `fn`
 --> tests/trybuild/failures/cgt_test_fd_struct.rs:2:1
  |
2 | struct Dummy;
  | ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/trybuild/failures/cgt_test_fd_struct.rs:2:14
  |
2 | struct Dummy;
  |              ^ consider adding a `main` function to `$DIR/tests/trybuild/failures/cgt_test_fd_struct.rs`
