cgt-macros/tests/trybuild/failures/cgt_test_fd_struct.rs
#[cgt_macros::cgt_test_with_fd]
struct Dummy;